fixed jumping Lines

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -1412,7 +1412,7 @@ body {
       .mobile-drawer-info {
         .two-line {
           height: 52px !important;
-          > div:not(.price) {padding-top: 44px !important;}
+          > div:not(.price) {padding-top: 45px !important;}
         }
 
         .mobile-content > div > div:nth-child(3) {
@@ -1423,7 +1423,10 @@ body {
         }
         .two-line-line { padding-top: 16% !important; }
         .mobile-content > div {
-          .title {float: left;}
+          .title {
+              float: left;
+              width: 77%;
+          }
           .price {
             float: right;
             font-weight: 700;
